--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "dependencies": {
     "@mantine/core": "7.2.0",
+    "@mantine/form": "^7.2.0",
     "@mantine/hooks": "7.2.0",
     "@next/bundle-analyzer": "^14.0.1",
     "@tabler/icons-react": "^2.40.0",
+    "luxon": "^3.4.3",
     "next": "14.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -39,6 +41,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.1",
     "@types/jest": "^29.5.7",
+    "@types/luxon": "^3",
     "@types/node": "^20.8.10",
     "@types/react": "18.2.34",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
