--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mantine/hooks": "7.2.0",
     "@next/bundle-analyzer": "^14.0.1",
     "@tabler/icons-react": "^2.40.0",
+    "@vercel/analytics": "^1.1.1",
     "luxon": "^3.4.3",
     "next": "14.0.1",
     "react": "18.2.0",
